--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Quincy</string>
     <string name="caption_btnpatient">Patient</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
 </resources>
